tests/paczka2/big_fuzzy/11613467.err
Error in line 2: 9653Yqpp8F S830 56,66
Error in line 7: AqRP0bTiklk S363 7,8
Error in line 3: XdxZpUkRk4 A562 32,0
Error in line 17: XdxZpUkRk4 S88 52,5
Error in line 23: NoiUIN1n S363 71,2
Error in line 6: 9653Yqpp8F S830 97,9
Error in line 28: NoiUIN1n S830 94,9
Error in line 34: 9653Yqpp8F S88 21,4
Error in line 38: OY3NHVXXc A562 99,4
Error in line 52: S88 S830 97,8
Error in line 54: NoiUIN1n S88 54,6
Error in line 80: OY3NHVXXc S363 75,3
Error in line 98: 9653Yqpp8F A562 284,43
Error in line 101: XdxZpUkRk- S363 206,2
Error in line 94: KToJ5i A562 82,8
Error in line 105: S88 A562 98,4
Error in line 110: AqRP0bTiklk S88 85,40
Error in line 107: S88 S363 94,4
Error in line 96: 9653Yqpp8F A562 72,7
Error in line 112: 9653Yqpp8F S363 52,5
Error in line 111: S88 A562 82,9
Error in line 126: NoiUIN1n S830 64,6
Error in line 125: AqRP0bTiklk S830 43,7
Error in line 122: OY3NHVXXc S88 93,5
Error in line 147: OY3NHVXXc S830 96,5
Error in line 136: 9653Yqpp8F S88 66,2
Error in line 141: S88 A562 3,4
Error in line 153: S88 S363 25,7
Error in line 145: XdxZpUkRk4 S363 73,1
Error in line 166: XdxZpUkRk4 S88 61,3
Error in line 170: AqRP0bTiklk S363 15,8
Error in line 174: AqRP0bTiklk S88 30,1
Error in line 169: XdxZpUkRk4 S363 97,6
Error in line 182: NoiUIN1n A562 29,4
Error in line 176: 9653Yqpp8F S363 53,0
Error in line 196: XdxZpUkRk4 S88 6,97
Error in line 183: XdxZpUkRk4 S830 45,2
Error in line 206: XdxZpUkRk4 A562 36,4
Error in line 209: KToJ5i S830 0,0
Error in line 221: KToJ5i S88 14,8
Error in line 220: XdxZpUkRk4 S363 91,3
Error in line 244: KToJ5i S88 80,0
Error in line 246: NoiUIN1n S363 7,4
